# ocaml-encodings

./: CMakeLists.txt  Makefile  OMakefile  OMakeroot  README.markdown  _tags  example.ml  example_test.ml  makefile  test.ml  test.mli
cmake/: UseOCaml.cmake
cmake/tests/: run_tests.sh
cmake/tests/01-simple-ocaml/: CMakeLists.txt
cmake/tests/02-trans-ocaml/: CMakeLists.txt  bar.ml
cmake/tests/03-simple-exe/: CMakeLists.txt  foo.ml
cmake/tests/04-exe-with-clib/: CMakeLists.txt  bar.ml  cstubs1.c  cstubs2.c  foo.mli
cmake/tests/05-exe-unittest/: CMakeLists.txt  bar.ml  foo.ml
cmake/tests/06-pre-proc/: CMakeLists.txt
cmake/tests/07-per-file-options/: CMakeLists.txt  bar.ml
cmake/tests/08-dep-vs-c-opts/: CMakeLists.txt  foo.ml
main/: OMakefile
ocamltest/: example_test.ml  test.mli
source/: _tags
source/encodings/main/: META.in
source/encodings/test/: CMakeLists.txt  encodings_test.ml
source/ocamltest-examples/test/: CMakeLists.txt  _tags
source/ocamltest/main/: META.in  ocamltest.ml  ocamltest.mli  test.ml
src/encodings/: CMakeLists.txt  OMakefile  OMakeroot  encodings.ml
src/encodings/test/: OMakefile  encodings_test.ml
src/ocamltest/: CMakeLists.txt  META.in  OMakefile  OMakeroot
src/ocamltest-examples/: CMakeLists.txt
src/ocamltest-examples/test/: example_test.ml
test/: OMakefile
